--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,45 @@ div.main-content {
   color: #007BFF; /* Change color on hover */
 }
 
+/* Mobile-friendly adjustments */
+.menu-toggle {
+  display: none; /* Hidden by default */
+}
+
+.nav-links {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    justify-content: space-between;
+  }
+  
+  .menu-toggle {
+    display: block; /* Show menu button */
+    margin-left: auto; /* Push the button to the right */
+
+  }
+
+  .nav-links {
+    display: none; /* Hide links */
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 60px; /* Height of the navbar */
+    left: 0;
+    background-color: #fff;
+    box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.1);
+  }
+
+  .nav-links.show {
+    display: flex;
+  }
+}
 
 /* Time Info */
 .time-info {
